--- a/templates/edit-todo.html
+++ b/templates/edit-todo.html
@@ -6,28 +6,30 @@
              Let's edit your todo!
         </div>
         <div class="card-body">
-            <form>
+            <form method="POST">
                 <div class="form-group">
                     <label>Title</label>
-                    <input type="text" class="form-control" name="title"
+                    <input type="text" class="form-control" name="title" value="{{todo.title}}"
                            required>
                 </div>
                 <div class="form-group">
                     <label>Description</label>
-                    <textarea class="form-control"rows="3" name="description"
-                              required></textarea>
+                    <textarea class="form-control"rows="3" name="description"required>{{todo.description}}
+                    </textarea>
                 </div>
                 <div class="form-group">
                     <label>Priority</label>
                     <select class="form-control" name="priority">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        <option {% if todo.priority == 1 %} selected="selected" {% endif %}>1</option>
+                        <option {% if todo.priority == 2 %} selected="selected" {% endif %}>2</option>
+                        <option {% if todo.priority == 3 %} selected="selected" {% endif %}>3</option>
+                        <option {% if todo.priority == 4 %} selected="selected" {% endif %}>4</option>
+                        <option {% if todo.priority == 5 %} selected="selected" {% endif %}>5</option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Add new todo</button>
+                <button type="submit" class="btn btn-primary">Edit your todo</button>
+                <button onclick="window.location.href='/todos/delete/{{todo.id}}'"
+                        type="button" class="btn btn-danger">Delete</button>
             </form>
         </div>
     </div>
