--- a/templates/home.html
+++ b/templates/home.html
@@ -10,41 +10,52 @@
             <p class="card-text">Information regarding stuff that needs to be complete</p>
 
             <table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Info</th>
-      <th scope="col">Actions</th>
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Info</th>
+                    <th scope="col">Actions</th>
 
-    </tr>
-  </thead>
-  <tbody>
+                </tr>
+                </thead>
+                <tbody>
 
-<tr class="pointer" >
+                {% for todo in todos %}
+                    {% if todo.complete == False %}
+                        <tr class="pointer">
+                            <td>{{loop.index}}</td>
+                            <td>{{todo.title}}</td>
+                            <td>
+                                <button onclick="window.location.href='complete/{{todo.id}}'"
+                                        type="button"
+                                        class="btn btn-success">Complete</button>
+                                <button onclick="window.location.href='edit-todo/{{todo.id}}'"
+                                        type="button"
+                                        class="btn btn-info">Edit
+                                </button>
+                            </td>
+                        </tr>
+                    {% else %}
+                        <tr class="pointer alert alert-success">
+                            <td>{{loop.index}}</td>
+                            <td class="strike-through-td">{{todo.title}}</td>
+                            <td>
+                                <button onclick="window.location.href='complete/{{todo.id}}'"
+                                        type="button"
+                                        class="btn btn-success">Undo</button>
+                                <button onclick="window.location.href='edit-todo/{{todo.id}}'"
+                                        type="button"
+                                        class="btn btn-info">Edit
+                                </button>
+                            </td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
 
-      <td>1</td>
-      <td id="td1">Take out the trash </td>
-      <td><button type="button" class="btn btn-success">Complete</button> <button type="button" class="btn btn-danger">Delete</button> </td>
-    </tr>
+                </tbody>
+            </table>
 
-  <tr class="pointer">
-
-      <td>2</td>
-      <td>Take out the trash</td>
-      <td><button type="button" class="btn btn-success">Complete</button> <button type="button" class="btn btn-danger">Delete</button> </td>
-    </tr>
-
-  <tr class="pointer" >
-
-      <td>3</td>
-      <td >Take out the trash </td>
-      <td><button type="button" class="btn btn-success">Complete</button> <button type="button" class="btn btn-danger">Delete</button> </td>
-    </tr>
-
-  </tbody>
-</table>
-
-            <a href="#" class="btn btn-primary">Add a new Todo!</a>
+            <a href="add-todo" class="btn btn-primary">Add a new Todo!</a>
         </div>
     </div>
 </div>
