--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,13 @@
             Register
         </div>
         <div class="card-body">
-            <form>
+            {% if msg %}
+            <div class="alert alert-danger" role="alert">
+                {{msg}}
+            </div>
+
+            {% endif %}
+            <form method="POST" action="/auth/register">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label>Email</label>
@@ -42,7 +48,7 @@
             </form>
         </div>
         <div class="card-footer text-muted">
-            <a href="#"> Already have an account? </a>
+            <a href="/auth"> Already have an account? </a>
         </div>
     </div>
 </div>
