--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,19 @@
             Login
         </div>
         <div class="card-body">
-            <form>
+            {% if msg %}
+            {% if msg == 'Logout Successful' or msg == 'User successfully created' %}
+            <div class="alert alert-success" role="alert">
+                {{msg}}
+            </div>
+            {% else %}
+            <div class="alert alert-danger" role="alert">
+                {{msg}}
+            </div>
+            {% endif %}
+            {% endif %}
+
+            <form method="POST" action="/auth">
                 <div class="form-group">
                     <label>Username</label>
                     <input type="text" class="form-control" name="email" required>
@@ -19,7 +31,7 @@
             </form>
         </div>
         <div class="card-footer text-muted">
-            <a href="#"> Register? </a>
+            <a href="register"> Register? </a>
         </div>
     </div>
 </div>
